--- a/static/style.css
+++ b/static/style.css
@@ -71,10 +71,18 @@ a, a:visited {
 }
 
 p.date {
-    color: #666;
-    font-style: italic;
+    color: #777;
 }
 
 .clearboth {
     clear: both;
+}
+
+.align-center {
+    display: block;
+    margin: 0 auto;
+}
+
+.align-right {
+    float: right;
 }
