--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ DEFAULT_LANG }}">
+<html lang="{% if article and article.language %}{{ article.language }}{% else %}{{ DEFAULT_LANG }}{% endif %}">
 
 <head>
     {% block head %}
@@ -9,7 +9,7 @@
     <!-- meta -->
     <meta charset="utf-8" />
     <meta name="author" content="{{ AUTHOR }}" />
-    <meta name="dc.language" content="en-US" />
+    <meta name="dc.language" content="{% if article and article.language %}{{ article.language }}{% else %}{{ DEFAULT_LANG }}{% endif %}" />
     <meta name="dc.license" content="{{ BLOG_LICENSE }}">
     {% if ctx and ctx.summary %}<meta name="description" content="{{ ctx.summary }}">{% endif %}
     {% if ctx and ctx.tags %}<meta name="keywords" content="{{ ctx.tags|sort(case_sensitive=true)|join(', ') }}">{% endif %}
@@ -52,8 +52,9 @@
 
     <!-- assets -->
     <!--[if lt IE 9]>
-        <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css">
 
     {% endblock head %}
