--- a/themes/dbrgn/templates/article.html
+++ b/themes/dbrgn/templates/article.html
@@ -1,35 +1,34 @@
 {% extends "base.html" %}
 
+{% block title %}{{ article.title }} - {{ SITENAME }}{% endblock %}
+
 {% block content %}
 
     <h1 class="title">{{ article.title }}</h1>
 
-    <section id="content">
-        {% if article.date %}
-            <div class="date">
-                <p>written on {{ article.locale_date }}</p>
-            </div>
-        {% endif %}
+    {% if article.date %}
+        <div class="date">
+            <p>written on {{ article.date|strftime("%A, %B %d, %Y") }}</p>
+        </div>
+    {% endif %}
 
-        {{ article.content }}
+    {{ article.content }}
 
-        {% if not article.flattr or not article.flattr == 'no' %}
-            <a href="https://flattr.com/submit/auto?user_id={{ FLATTR_USERNAME }}&url={{ SITE_URL }}/{{ article.url }}/&title={{ article.title|striptags|urlencode }}&description={{ article.summary|striptags|urlencode }}&tags={% for tag in article.tags|sort %}{{ tag|urlencode }}{% if not loop.last %},{% endif %}{% endfor %}&category=text">
-                <img class="flattrbutton" src="{{ SITEURL }}/theme/images/flattr-badge-large.png" alt="Flattr this!" /> 
-            </a>
-        {% endif %}
+    {% if not article.flattr or not article.flattr == 'no' %}
+        <a href="https://flattr.com/submit/auto?user_id={{ FLATTR_USERNAME }}&url={{ SITE_URL }}/{{ article.url }}/&title={{ article.title|striptags|urlencode }}&description={{ article.summary|striptags|urlencode }}&tags={% for tag in article.tags|sort %}{{ tag|urlencode }}{% if not loop.last %},{% endif %}{% endfor %}&category=text">
+            <img class="flattrbutton" src="{{ SITEURL }}/theme/images/flattr-badge-large.png" alt="Flattr this!" /> 
+        </a>
+    {% endif %}
 
-        {% if article.tags %}
-            <div class="tags">
-                <p>This entry was tagged
-                {% for tag in article.tags|sort %}
-                    {%- if not loop.first and not loop.last %}, {% endif -%}
-                    {%- if loop.last and not loop.first %} and {% endif %}
-                    <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag.name.replace(' ', '_') }}</a>
-                {%- endfor %}</p>
-            </div>
-        {% endif %}
-
-    </section>
+    {% if article.tags %}
+        <div class="tags">
+            <p>This entry was tagged
+            {% for tag in article.tags|sort %}
+                {%- if not loop.first and not loop.last %}, {% endif -%}
+                {%- if loop.last and not loop.first %} and {% endif %}
+                <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag.name.replace(' ', '_') }}</a>
+            {%- endfor %}</p>
+        </div>
+    {% endif %}
 
 {% endblock %}
