--- a/themes/dbrgn/templates/tag.html
+++ b/themes/dbrgn/templates/tag.html
@@ -6,13 +6,18 @@
 
     <h1 class="title">Entries tagged “{{ tag }}”</h1>
 
-    <ul>
     {%- for article in articles %}
-        <li>
-            <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>,
-            written on {{ article.locale_date }}
-        </li>
+        <article class="entry-overview">
+            <div class="date">{{ article.locale_date }}</div>
+            <div class="detail">
+                <header><h3>
+                    <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">
+                        {{ article.title }}
+                    </a>
+                </h3></header>
+                <div class="summary">{{ article.summary|striptags }}</div>
+            </div>
+        </article>
     {% endfor %}
-    </ul>
 
 {% endblock %}
