--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -21,8 +21,8 @@
         <meta name="google-site-verification" content="{{ GOOGLE_SITE_VERIFICATION }}" />
     {% endif %}
 
-    <!-- favicon TODO -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <!-- favicon -->
+    <link rel="icon" href="/theme/favicon.ico" type="image/x-icon">
 
     <!-- newsfeeds -->
     {% if FEED_ALL_ATOM %}
