Fixed wrong ID and links

--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -73,9 +73,9 @@
 
         <div class="clearboth"></div>
 
-        <div id="content" class="hyphenate">
+        <section id="content" class="hyphenate">
             {% block content %}{% endblock %}
-        </div>
+        </section>
     </div>
 
     <script type="text/javascript">
