--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -78,6 +78,7 @@
         </section>
     </div>
 
+    {# Google Analytics #}
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', '{{ GOOGLE_ANALYTICS }}']);
@@ -88,10 +89,21 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+
+    {# Mathjax for LaTeX rendering #}
+    {% if article and article.latex %}
+        {{ article.latex }}
+    {% endif %}
+    {% if page and page.latex %}
+        {{ page.latex }}
+    {% endif %}
+
+    {# Hyphenator #}
     <script type="text/javascript" src="{{ SITEURL }}/theme/js/hyphenator.js"></script>
     <script type="text/javascript">
         Hyphenator.config({
-            donthyphenateclassname : 'docutils literal'
+            donthyphenateclassname: 'docutils literal',
+            useCSS3hyphenation: true
         });
         Hyphenator.run();
     </script>
