--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -56,6 +56,7 @@
     <![endif]-->
     <link href="https://fonts.googleapis.com/css?family=Linden+Hill:400,400italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/{{ CSS_FILE }}" type="text/css">
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pygments.css" type="text/css">
 
     {% endblock head %}
 </head>
