Don't hyphenate entire docutils class

--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -103,7 +103,7 @@
     <script type="text/javascript" src="{{ SITEURL }}/theme/js/hyphenator.js"></script>
     <script type="text/javascript">
         Hyphenator.config({
-            donthyphenateclassname: 'docutils literal',
+            donthyphenateclassname: 'docutils',
             useCSS3hyphenation: true
         });
         Hyphenator.run();
