Fixed disqus_url variable

--- a/themes/dbrgn/templates/disqus.html
+++ b/themes/dbrgn/templates/disqus.html
@@ -5,7 +5,7 @@
     var disqus_shortname = "{{ DISQUS_SITENAME }}";
     var disqus_identifier = "{{ article.url }}";
     var disqus_title = "{{ article.title|striptags }}";
-    var disqus_url = "{{ article.url }}";
+    var disqus_url = "{{ SITEURL }}/{{ article.url }}";
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
