New blogpost: Improving Firefox SSL/TLS Security

--- a/themes/dbrgn/templates/article.html
+++ b/themes/dbrgn/templates/article.html
@@ -14,7 +14,7 @@
         </div>
     {% endif %}
 
-    <div class="clearboth">
+    <div class="clearboth article-content">
         {{ article.content }}
     </div>
 
