--- a/themes/dbrgn/static/css/main.css
+++ b/themes/dbrgn/static/css/main.css
@@ -45,6 +45,10 @@ body {
     margin-top: 0;
 }
 
+#content .article-content img {
+    margin-bottom: 22px !important;
+}
+
 div.highlight pre, pre.literal-block {
     margin: 5px;
     font-family: 'Consolas', 'Menlo', 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
