--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -20,6 +20,7 @@
     {% if GOOGLE_SITE_VERIFICATION %}
         <meta name="google-site-verification" content="{{ GOOGLE_SITE_VERIFICATION }}" />
     {% endif %}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- favicon -->
     <link rel="icon" href="/theme/favicon.ico" type="image/x-icon">
