--- a/themes/dbrgn/templates/base.html
+++ b/themes/dbrgn/templates/base.html
@@ -66,7 +66,7 @@
     <div id="wrapper">
         <div id="blogtitle"><a href="{{ SITEURL }}">{{ SITENAME }}</a></div>
         <ul id="mainnav">
-            <li><a href="/">home</a></li>
+            <li class="first"><a href="/">home</a></li>
             <li><a href="/archive/">archive</a></li>
             <li><a href="/tags/">tags</a></li>
             <li><a href="/blog/">about this blog</a></li>
